<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_task"
            android:title="@string/action_task"/>
        <item
            android:id="@+id/action_projects"
            android:title="@string/action_projects"/>
        <item
            android:id="@+id/action_agenda"
            android:title="@string/action_agenda"/>
    </group>

    <item
        android:title="@string/other"
        android:id="@+id/navigation_subheader">

        <menu>
            <item
                android:id="@+id/action_help"
                android:title="@string/AboutMe"/>

            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings"/>
            <item
                android:id="@+id/action_about"
                android:title="@string/AboutMe"/>
        </menu>

    </item>

</menu>