<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtV_Name"
        android:layout_width="207dp"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="18dp"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/list_primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1º Ciclo Formativo Grado Superior" />

    <TextView
        android:id="@+id/txtV_Prioridad"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="42dp"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/list_primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/txt_Prioridad"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Alta" />

    <TextView
        android:id="@+id/txt_Prioridad"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/list_primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toEndOf="@+id/txtV_Dificultad"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/Prioridad" />

    <TextView
        android:id="@+id/txtV_Dificultad"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/list_primary_text"
        app:layout_constraintStart_toEndOf="@+id/txt_Dificultad"
        app:layout_constraintTop_toTopOf="parent"
        tools:text=" Alta" />

    <TextView
        android:id="@+id/txt_Dificultad"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="42dp"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/list_primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/Dificultad" />

    <TextView
        android:id="@+id/txtV_DeadLine"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/list_primary_text"
        app:layout_constraintStart_toEndOf="@+id/txt_DeadLine"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="10-10-2017" />

    <TextView
        android:id="@+id/txt_DeadLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="60dp"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/list_primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/fechaFin" />

    <com.github.ivbaranov.mli.MaterialLetterIcon
        android:id="@+id/materialLetterIcon"
        android:layout_width="@dimen/letter_icon_size"
        android:layout_height="@dimen/letter_icon_size"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>